--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -1,6 +1,18 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "field:company.company,invoice_background:"
+msgid "Invoice Background"
+msgstr "Factura fondo de página"
+
+msgctxt "field:company.company,invoice_footer:"
+msgid "Invoice Footer"
+msgstr "Factura pie de página"
+
+msgctxt "field:company.company,invoice_header:"
+msgid "Invoice Header"
+msgstr "Factura encabezado de página"
 
 msgctxt "field:company.company,invoice_qty:"
 msgid "Invoice Qty"
