--- a/locale/ca.po
+++ b/locale/ca.po
@@ -30,6 +30,10 @@ msgctxt "field:company.company,shipment_qty:"
 msgid "Shipment Qty"
 msgstr "Quantitat Albarà"
 
+msgctxt "field:company.company,show_uom:"
+msgid "Show UoM"
+msgstr "Mostra UdM"
+
 msgctxt "help:company.company,invoice_qty:"
 msgid "Show qty without decimals"
 msgstr "Mostra les quantitats sense decimals"
@@ -45,3 +49,7 @@ msgstr "Mostra les quantitats sense decimals"
 msgctxt "help:company.company,shipment_qty:"
 msgid "Show qty without decimals"
 msgstr "Mostra les quantitats sense decimals"
+
+msgctxt "help:company.company,show_uom:"
+msgid "Show the UoM"
+msgstr "Mostra la unitat de mesura"
