--- a/locale/es.po
+++ b/locale/es.po
@@ -30,6 +30,10 @@ msgctxt "field:company.company,shipment_qty:"
 msgid "Shipment Qty"
 msgstr "Cantidad Albarán"
 
+msgctxt "field:company.company,show_uom:"
+msgid "Show UoM"
+msgstr "Mostrar UdM"
+
 msgctxt "help:company.company,invoice_qty:"
 msgid "Show qty without decimals"
 msgstr "Muestra las cantidades sin decimales"
@@ -45,3 +49,7 @@ msgstr "Muestra las cantidades sin decimales"
 msgctxt "help:company.company,shipment_qty:"
 msgid "Show qty without decimals"
 msgstr "Muestra las cantidades sin decimales"
+
+msgctxt "help:company.company,show_uom:"
+msgid "Show the UoM"
+msgstr "Muestra la unidad de medida"
