--- a/locale/ca.po
+++ b/locale/ca.po
@@ -30,6 +30,10 @@ msgctxt "field:company.company,shipment_qty:"
 msgid "Shipment Qty"
 msgstr "Quantitat Albarà"
 
+msgctxt "field:company.company,show_origins:"
+msgid "Show Origins"
+msgstr "Mostrar orígenes"
+
 msgctxt "field:company.company,show_uom:"
 msgid "Show UoM"
 msgstr "Mostra UdM"
@@ -49,6 +53,10 @@ msgstr "Mostra les quantitats sense decimals"
 msgctxt "help:company.company,shipment_qty:"
 msgid "Show qty without decimals"
 msgstr "Mostra les quantitats sense decimals"
+
+msgctxt "help:company.company,show_origins:"
+msgid "Show the origins"
+msgstr "Mostra els orígens"
 
 msgctxt "help:company.company,show_uom:"
 msgid "Show the UoM"
